<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/livro_anotacoes"
        android:textSize="32sp"
        android:textStyle="bold|italic"
        android:textColor="@color/black"
        android:gravity="center"
        android:paddingTop="40dp"
        android:paddingBottom="80dp"
        android:background="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="40dp">

            <Button
                android:id="@+id/btnPousadaParaiso"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/pousada_paraiso"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:background="@drawable/button_background"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp" />

            <Button
                android:id="@+id/btnDorysPrime"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/dorys_prime"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:background="@drawable/button_background"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp" />

            <Button
                android:id="@+id/btnHotelJR"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/hotel_jr"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:background="@drawable/button_background"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp" />

            <Button
                android:id="@+id/btnHotelGuarany"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/hotel_guarany"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:background="@drawable/button_background"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/btn_logout"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@color/purple_700" />

    </LinearLayout>

</LinearLayout>

